--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -1,11 +1,11 @@
 .loader {
   display: inline-block;
+  margin: 2.5rem;
   color: transparent;
   border-color: var(--clr-white);
   border-style: solid;
   border-bottom-color: var(--clr-accent);
   border-radius: 50%;
-  transform: translate(-50%, -50%);
   animation: rotation 1s linear infinite;
   will-change: transform;
 
